[metadata]
name = code2text
version = 0.0.1
description = Code-explanation tools based on tree-sitter
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
license_files = LICENSE
author = Daniel Swanson
author_email = apertium@dangswan.com
home_page = https://github.com/mr-martian/code2text

[options]
install_requires =
  tree-sitter >= 0.20
build_requires =
  tree-sitter-apertium >= 0.1.1
